--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       </div>
     </footer>
 
-    <div class="burger-menu is-open js-menu-container" id="mobile-menu">
+    <div class="burger-menu js-menu-container" id="mobile-menu">
       <button class="menu-toggle close-phone-nav js-close-menu" data-modal-close>
         <svg class="close-svg close-svg-n">
           <use href="./images/icons.svg#icon-close-black-18dp"></use>
