--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
           <ul class="command">
             <li class="commad-item">
               <img
+                srcset="./images/markguerrero.jpg 1x, ./images/mg@2.jpg 2x"
                 src="./images/markguerrero.jpg"
                 alt="mark-guerrero"
                 width="264"
@@ -268,6 +269,7 @@
 
             <li class="commad-item">
               <img
+                srcset="./images/tomford.jpg 1x, ./images/tf@2.jpg 2x"
                 src="./images/tomford.jpg"
                 alt="tom-ford"
                 width="264"
@@ -309,6 +311,7 @@
 
             <li class="commad-item">
               <img
+                srcset="./images/camilagarcia.jpg 1x, ./images/cg@2.jpg 2x"
                 src="./images/camilagarcia.jpg"
                 alt="camila-garcia"
                 width="264"
@@ -350,6 +353,7 @@
 
             <li class="commad-item">
               <img
+                srcset="./images/danielwilson.jpg 1x ,./images/dw@2.jpg 2x"
                 src="./images/danielwilson.jpg"
                 alt="daniel-wilson"
                 width="264"
