tablet width some section next

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <address class="contact-parents">
           <ul class="cont-item">
-            <li style="margin-right: 40px">
+            <li class="tablet">
               <a href="mailto:info@devstudio.com" class="contact"
                 >info@devstudio.com</a
               >
@@ -58,7 +58,7 @@
         </address>
 
         <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-          <img src="./images/vector-gamburger.jpg" alt="button">
+          <img src="./images/vector-gamburger.jpg" srcset="./images/vector-gamburger.jpg 1x, ./images/scrn@2.jpg 2x" alt="button">
         </button>
       </div>
     </header>
