--- a/portfolio.html
+++ b/portfolio.html
@@ -106,6 +106,7 @@
           <ul class="list-set">
             <li class="list-set-item">
               <img
+                srcset="./images/projectcard1.jpg 1x , ./images/baic@2.jpg 2x"
                 src="./images/projectcard1.jpg"
                 alt="Banking"
                 width="360"
@@ -125,6 +126,7 @@
             </li>
             <li class="list-set-item">
               <img
+                srcset="./images/projectcard2.jpg 1x , ./images/cp@2.jpg 2x"
                 src="./images/projectcard2.jpg"
                 alt="Payment"
                 width="360"
@@ -144,6 +146,7 @@
             </li>
             <li class="list-set-item">
               <img
+                srcset="./images/projectcard3.jpg 1x , ./images/ma@2.jpg 2x "
                 src="./images/projectcard3.jpg"
                 alt="Computer"
                 width="360"
@@ -163,7 +166,7 @@
             </li>
 
             <li class="list-set-item">
-              <img src="./images/pc4.jpg" alt="Car" width="360" height="300" />
+              <img src="./images/pc4.jpg" srcset="./images/pc4.jpg 1x , ./images/ts@2.jpg 2x " alt="Car" width="360" height="300" />
               <div class="container-card">
                 <p>
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -178,6 +181,7 @@
             </li>
             <li class="list-set-item">
               <img
+                srcset="./images/pc5.jpg 1x, ./images/si@2.jpg 2x"
                 src="./images/pc5.jpg"
                 alt="Phone wallpapers"
                 width="360"
@@ -197,6 +201,7 @@
             </li>
             <li class="list-set-item">
               <img
+                srcset="./images/pc6.jpg 1x , ./images/oc@2.jpg 2x"
                 src="./images/pc6.jpg"
                 alt="A girl with headphones"
                 width="360"
@@ -217,6 +222,7 @@
 
             <li class="list-set-item">
               <img
+                srcset="./images/pc7.jpg 1x , ./images/isc@2.jpg 2x"
                 src="./images/pc7.jpg"
                 alt="Instagram stories example"
                 width="360"
@@ -236,6 +242,7 @@
             </li>
             <li class="list-set-item">
               <img
+                srcset="./images/pc8.jpg 1x , ./images/of@2.jpg 2x"
                 src="./images/pc8.jpg"
                 alt="A bag with food"
                 width="360"
@@ -255,6 +262,7 @@
             </li>
             <li class="list-set-item">
               <img
+                srcset="./images/pc9.jpg 1x , ./images/fc@2.jpg 2x"
                 src="./images/pc9.jpg"
                 alt="Cup of coffee"
                 width="360"
