--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </svg>
             </label>
 
-            <label for="text-modal" class="label-modal other-lb lb-n"><span class="text-input-gray">Comment</span>
+            <label for="comments-m" class="label-modal other-lb lb-n"><span class="text-input-gray">Comment</span>
             <textarea name="comments-m" id="comments-m" rows="10" class="textarea-modal" placeholder="Text input"></textarea>
             </label>
 
@@ -115,14 +115,15 @@
             <svg class="checkbox-svg" width="16px" height="16px">
               <use href="./images/icons.svg#icon-vector"></use>
             </svg>
-            <span class="descr-checkbox" href="#">I accept the terms and conditions of the <a class="link-checkbox">Privacy Policy</a></span>
+            <span class="descr-checkbox">I accept the terms and conditions of the <a class="link-checkbox">Privacy Policy</a></span>
             </label>
             
             <button type="submit" class="btn-modal">Send</button>
           </form>
         </div>
+      </div>
     </div>
-      </section>
+    </section>
 
       <section>
         <div class="containertwo">
