--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
           </li>
         </ul>
       </nav>
+      <div>
       <address class="ad">
         <ul class="cont-item">
           <li class="address-phone">
@@ -579,6 +580,7 @@
             </a>
           </li>
         </ul>
+      </div>
     </div>
 
 
